[gd_scene format=3 uid="uid://bk3w55dilc2d0"]

[ext_resource type="Script" uid="uid://ddjcmkwir4osd" path="res://_/script/nes_controller_to_int.gd" id="1_50vku"]
[ext_resource type="Script" uid="uid://cayrsxs1olkoq" path="res://_/script/nes_hello_world.gd" id="2_xihfx"]
[ext_resource type="Script" uid="uid://boi2ywy0b6ow2" path="res://_/script/nes_hello_word_udp.gd" id="3_jgbpq"]
[ext_resource type="Script" uid="uid://csyi6i1k70xws" path="res://_/script/nes_send_integer_message_udp.gd" id="4_gds2x"]
[ext_resource type="Script" uid="uid://c7jenviiw66o" path="res://_/script/nes_ui2d_button_to_down_up_bool.gd" id="5_b66os"]
[ext_resource type="Script" uid="uid://cvo5y0mmcaf0i" path="res://_/script/nes_send_text_message_on_off.gd" id="6_i3ae7"]
[ext_resource type="Texture2D" uid="uid://b5nfry4efhp5l" path="res://_/assets/2d/nes_icon/nes_controller.png" id="7_j5ora"]
[ext_resource type="Script" uid="uid://syyy1oerlepj" path="res://_/script/nes_input_fiel_file_memory.gd" id="8_ukrpb"]

[node name="DemoHelloWorld" type="Node" unique_id=1771100514]

[node name="NesControllerToInt" type="Node" parent="." unique_id=1103731095]
script = ExtResource("1_50vku")
use_print_debugging = true
metadata/_custom_type_script = "uid://ddjcmkwir4osd"

[node name="Label" type="Label" parent="." unique_id=1647132205]
visible = false
anchors_preset = -1
anchor_right = 0.158
anchor_bottom = 0.125
offset_right = -3.0160065
offset_bottom = -3.0
text = "..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="SayHello" type="Node" parent="." unique_id=9985977 node_paths=PackedStringArray("ui_label_to_use")]
script = ExtResource("2_xihfx")
ui_label_to_use = NodePath("../Label")

[node name="SayHelloWithUDP" type="Node" parent="." unique_id=213871542]
script = ExtResource("3_jgbpq")
use_debug_print = true

[node name="SendIntegerUDP" type="Node" parent="." unique_id=2026404203]
script = ExtResource("4_gds2x")
use_debug_print = true

[node name="Button Say Hello" type="Button" parent="." unique_id=1103550880]
anchors_preset = -1
anchor_top = 0.127
anchor_right = 0.23900001
anchor_bottom = 0.201
offset_left = 69.0
offset_top = 60.85
offset_right = 68.672
offset_bottom = 60.898003
text = "Say Hello By UDP"

[node name="Button Press A" type="Button" parent="." unique_id=671070512]
anchors_preset = -1
anchor_left = 0.26700002
anchor_top = 0.127
anchor_right = 0.50600004
anchor_bottom = 0.19600001
offset_left = 66.41597
offset_top = 59.85
offset_right = 66.08789
offset_bottom = 63.13801
toggle_mode = true
text = "Press A Button Xbox"

[node name="NesUiButtonToDownUpBool" type="Node" parent="Button Press A" unique_id=1196995777 node_paths=PackedStringArray("button_to_listen")]
script = ExtResource("5_b66os")
button_to_listen = NodePath("..")
metadata/_custom_type_script = "uid://c7jenviiw66o"

[node name="Button Press B" type="Button" parent="." unique_id=344695028]
anchors_preset = -1
anchor_left = 0.522
anchor_top = 0.127
anchor_right = 0.69900006
anchor_bottom = 0.201
offset_left = 74.655975
offset_top = 63.85
offset_right = 98.05591
offset_bottom = 66.898
toggle_mode = true
text = "Press B Button Xbox"

[node name="Button Press Menu Left" type="Button" parent="." unique_id=981518890]
anchors_preset = -1
anchor_left = 0.26700002
anchor_top = 0.19900002
anchor_right = 0.505
anchor_bottom = 0.273
offset_left = 65.41597
offset_top = 63.193993
offset_right = 66.23999
offset_bottom = 63.241997
toggle_mode = true
text = "Menu Left"

[node name="Button Press Menu Right" type="Button" parent="." unique_id=525852222]
anchors_preset = -1
anchor_left = 0.522
anchor_top = 0.19600001
anchor_right = 0.70100003
anchor_bottom = 0.275
offset_left = 76.655975
offset_top = 63.13801
offset_right = 66.447876
offset_bottom = 62.946014
toggle_mode = true
text = "Menu Right"

[node name="Button Press Arrow Right" type="Button" parent="." unique_id=1115433497]
anchors_preset = -1
anchor_left = 0.52500004
anchor_top = 0.349
anchor_right = 0.76400006
anchor_bottom = 0.423
offset_left = 66.19992
offset_top = 62.994003
offset_right = 65.87195
offset_bottom = 63.042007
toggle_mode = true
text = "Press Arrow Right
"

[node name="Button Press Arrow Up" type="Button" parent="." unique_id=41703400]
anchors_preset = -1
anchor_left = 0.40600002
anchor_top = 0.275
anchor_right = 0.64500004
anchor_bottom = 0.349
offset_left = 66.287994
offset_top = 62.946014
offset_right = 65.96002
offset_bottom = 62.994003
toggle_mode = true
text = "Press Arrow Up
"

[node name="Button Press Arrow Down" type="Button" parent="." unique_id=399669294]
anchors_preset = -1
anchor_left = 0.41000003
anchor_top = 0.43400002
anchor_right = 0.648
anchor_bottom = 0.508
offset_left = 65.6799
offset_top = 62.914017
offset_right = 66.50403
offset_bottom = 62.962006
toggle_mode = true
text = "Press Arrow Down
"

[node name="Button Press Arrow Left" type="Button" parent="." unique_id=1903608060]
anchors_preset = -1
anchor_left = 0.277
anchor_top = 0.35300002
anchor_right = 0.51000005
anchor_bottom = 0.42700002
offset_left = 65.895966
offset_top = 63.402008
offset_right = 72.47995
offset_bottom = 63.449997
toggle_mode = true
text = "Press Arrow Left
"

[node name="Button Say My Name" type="Button" parent="." unique_id=1651936061]
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.19800001
anchor_right = 0.23900001
anchor_bottom = 0.29200003
offset_left = 67.54397
offset_top = 65.84198
offset_right = 70.671936
offset_bottom = 54.541977
text = "Say Hello My Name"

[node name="Button Press Release" type="Button" parent="." unique_id=229544836]
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.289
anchor_right = 0.24700001
anchor_bottom = 0.363
offset_left = 71.54397
offset_top = 62.87401
offset_right = 65.4559
offset_bottom = 62.922012
text = "Say Down and Release"

[node name="Toggle Down Release" type="CheckButton" parent="." unique_id=806994112]
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.386
anchor_right = 0.23700002
anchor_bottom = 0.45100003
offset_left = 76.54397
offset_top = 58.01799
offset_right = 110.34395
offset_bottom = 82.767975
text = "Say Down and Release 
Toggle"

[node name="SendTextMessageOnOff" type="Node" parent="Toggle Down Release" unique_id=1818366154]
script = ExtResource("6_i3ae7")
sent_when_down = "Hey mon ami"
sent_when_up = "Tu aimes ca les patates"

[node name="PanelNES" type="Panel" parent="." unique_id=1595204412]
visible = false
clip_contents = true
anchors_preset = -1
anchor_left = 0.045
anchor_top = 0.58500004
anchor_right = 0.88600004
anchor_bottom = 0.938
offset_right = -7.672058
offset_bottom = 15.175964

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PanelNES" unique_id=727925015]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 2.4242

[node name="Panel" type="Panel" parent="PanelNES/AspectRatioContainer" unique_id=1419012416]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelNES/AspectRatioContainer/Panel" unique_id=520526315]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_j5ora")
expand_mode = 1

[node name="PanelRootNES" type="Panel" parent="." unique_id=1421708215]
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SendIntegerUDP" type="Node" parent="PanelRootNES" unique_id=331122291]
script = ExtResource("4_gds2x")

[node name="NesControllerToInt" type="Node" parent="PanelRootNES" unique_id=2079696832]
script = ExtResource("1_50vku")
metadata/_custom_type_script = "uid://ddjcmkwir4osd"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PanelRootNES" unique_id=1645603202]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 2.4242

[node name="PanelRatioNES" type="Panel" parent="PanelRootNES/AspectRatioContainer" unique_id=953428195]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=286891479]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_j5ora")
expand_mode = 1

[node name="Button Press A" type="Button" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=198572581]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.77300006
anchor_top = 0.57100004
anchor_right = 0.887
anchor_bottom = 0.84200007
offset_left = 0.15325928
offset_top = 0.08699036
offset_right = 0.0524292
offset_bottom = 0.07398987
theme_override_font_sizes/font_size = 8
toggle_mode = true
text = "A"

[node name="NesUiButtonToDownUpBool" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press A" unique_id=2107547919 node_paths=PackedStringArray("button_to_listen")]
script = ExtResource("5_b66os")
button_to_listen = NodePath("..")
metadata/_custom_type_script = "uid://c7jenviiw66o"

[node name="Button Press B" type="Button" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=1094466405]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.64500004
anchor_top = 0.56700003
anchor_right = 0.75900006
anchor_bottom = 0.841
offset_left = 0.14370728
offset_top = -0.10101318
offset_right = 0.04284668
offset_bottom = 0.2769928
theme_override_font_sizes/font_size = 8
toggle_mode = true
text = "B"

[node name="NesUiButtonToDownUpBool2" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press B" unique_id=442316137 node_paths=PackedStringArray("button_to_listen")]
script = ExtResource("5_b66os")
button_to_listen = NodePath("..")
metadata/_custom_type_script = "uid://c7jenviiw66o"

[node name="Button Press Menu Left" type="Button" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=278789510]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33400002
anchor_top = 0.62600005
anchor_right = 0.46
anchor_bottom = 0.79300004
offset_left = 0.19067383
offset_top = -0.07801056
offset_right = 0.18449402
offset_bottom = 0.020996094
theme_override_font_sizes/font_size = 8
toggle_mode = true
text = "ML
"

[node name="NesUiButtonToDownUpBool3" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Menu Left" unique_id=2141139014 node_paths=PackedStringArray("button_to_listen")]
script = ExtResource("5_b66os")
button_to_listen = NodePath("..")
metadata/_custom_type_script = "uid://c7jenviiw66o"

[node name="Button Press Menu Right" type="Button" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=40567911]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.46300003
anchor_top = 0.63100004
anchor_right = 0.586
anchor_bottom = 0.79300004
offset_top = -0.09300232
offset_right = 0.17831421
offset_bottom = 0.020996094
theme_override_font_sizes/font_size = 8
toggle_mode = true
text = "MR
"

[node name="NesUiButtonToDownUpBool4" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Menu Right" unique_id=1280219845 node_paths=PackedStringArray("button_to_listen")]
script = ExtResource("5_b66os")
button_to_listen = NodePath("..")
metadata/_custom_type_script = "uid://c7jenviiw66o"

[node name="Button Press Arrow Right" type="Button" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=103503370]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.522
anchor_right = 0.25500003
anchor_bottom = 0.66
offset_left = 0.08647156
offset_top = 0.03400421
offset_right = 0.067588806
offset_bottom = 0.019989014
theme_override_font_sizes/font_size = 8
toggle_mode = true
text = "AR
"

[node name="NesUiButtonToDownUpBool5" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Arrow Right" unique_id=906330716 node_paths=PackedStringArray("button_to_listen")]
script = ExtResource("5_b66os")
button_to_listen = NodePath("..")
metadata/_custom_type_script = "uid://c7jenviiw66o"

[node name="Button Press Arrow Up" type="Button" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=479323409]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.135
anchor_top = 0.36900002
anchor_right = 0.194
anchor_bottom = 0.517
offset_left = 0.12108612
offset_top = 0.09300995
offset_right = 0.08644867
offset_bottom = 0.04901123
theme_override_font_sizes/font_size = 8
toggle_mode = true
text = "AU
"

[node name="NesUiButtonToDownUpBool6" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Arrow Up" unique_id=1223236279 node_paths=PackedStringArray("button_to_listen")]
script = ExtResource("5_b66os")
button_to_listen = NodePath("..")
metadata/_custom_type_script = "uid://c7jenviiw66o"

[node name="Button Press Arrow Down" type="Button" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=81842726]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.13700001
anchor_top = 0.671
anchor_right = 0.192
anchor_bottom = 0.813
offset_left = 0.13689423
offset_right = 0.0707016
offset_bottom = -0.039016724
theme_override_font_sizes/font_size = 8
toggle_mode = true
text = "AD
"

[node name="NesUiButtonToDownUpBool7" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Arrow Down" unique_id=455821334 node_paths=PackedStringArray("button_to_listen")]
script = ExtResource("5_b66os")
button_to_listen = NodePath("..")
metadata/_custom_type_script = "uid://c7jenviiw66o"

[node name="Button Press Arrow Left" type="Button" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=1138854284]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.074
anchor_top = 0.522
anchor_right = 0.133
anchor_bottom = 0.66
offset_left = 0.1399765
offset_top = 0.033981323
offset_right = 0.10533142
offset_bottom = -0.059005737
theme_override_font_sizes/font_size = 8
toggle_mode = true
text = "AL
"

[node name="NesUiButtonToDownUpBool8" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Arrow Left" unique_id=1059441924 node_paths=PackedStringArray("button_to_listen")]
script = ExtResource("5_b66os")
button_to_listen = NodePath("..")
metadata/_custom_type_script = "uid://c7jenviiw66o"

[node name="LineEdit IP" type="LineEdit" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=1554423904]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.030000001
anchor_top = 0.02
anchor_right = 0.52500004
anchor_bottom = 0.158
offset_left = -0.20707321
offset_right = 0.19717407
offset_bottom = -0.013999939
theme_override_font_sizes/font_size = 14
placeholder_text = "Enter ipv4 ... "

[node name="NesInputFieldFileMemory" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/LineEdit IP" unique_id=1559212425 node_paths=PackedStringArray("input_field")]
script = ExtResource("8_ukrpb")
input_field = NodePath("..")
save_unique_id = "NES_TARGET_IPV4"
default_if_not_set = "127.0.0.1"
metadata/_custom_type_script = "uid://syyy1oerlepj"

[node name="LineEdit Port" type="LineEdit" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=1734771222]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.546
anchor_top = 0.02
anchor_right = 0.74600005
anchor_bottom = 0.153
offset_right = -1.5596924
theme_override_font_sizes/font_size = 14
placeholder_text = "Port ..."

[node name="NesInputFieldFileMemory2" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/LineEdit Port" unique_id=1837360251 node_paths=PackedStringArray("input_field")]
script = ExtResource("8_ukrpb")
input_field = NodePath("..")
save_unique_id = "NES_TARGET_PORT"
default_if_not_set = "3615"
metadata/_custom_type_script = "uid://syyy1oerlepj"

[node name="LineEdit PlayerID" type="LineEdit" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=359031307]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.771
anchor_top = 0.020000001
anchor_right = 0.97200006
anchor_bottom = 0.15300001
theme_override_font_sizes/font_size = 14
placeholder_text = "Player id..."

[node name="NesInputFieldFileMemory3" type="Node" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES/LineEdit PlayerID" unique_id=149606412 node_paths=PackedStringArray("input_field")]
script = ExtResource("8_ukrpb")
input_field = NodePath("..")
save_unique_id = "NES_TARGET_PLAYER_ID"
default_if_not_set = "1"
metadata/_custom_type_script = "uid://syyy1oerlepj"

[node name="Label" type="Label" parent="PanelRootNES/AspectRatioContainer/PanelRatioNES" unique_id=839697949]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.62100005
anchor_top = 0.21100001
anchor_right = 0.96800005
anchor_bottom = 0.42800003
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="on_integer_to_send_requested" from="NesControllerToInt" to="SendIntegerUDP" method="send_integer"]
[connection signal="pressed" from="Button Say Hello" to="SayHelloWithUDP" method="send_text_message_hello_world"]
[connection signal="on_down_up_value_changed" from="Button Press A/NesUiButtonToDownUpBool" to="NesControllerToInt" method="set_down_up_key_a"]
[connection signal="toggled" from="Button Press B" to="NesControllerToInt" method="set_down_up_key_b"]
[connection signal="toggled" from="Button Press Menu Left" to="NesControllerToInt" method="set_down_up_key_menu_left"]
[connection signal="toggled" from="Button Press Menu Right" to="NesControllerToInt" method="set_down_up_key_menu_right"]
[connection signal="toggled" from="Button Press Arrow Right" to="NesControllerToInt" method="set_down_up_key_arrow_right"]
[connection signal="toggled" from="Button Press Arrow Up" to="NesControllerToInt" method="set_down_up_key_arrow_up"]
[connection signal="toggled" from="Button Press Arrow Down" to="NesControllerToInt" method="set_down_up_key_arrow_down"]
[connection signal="toggled" from="Button Press Arrow Left" to="NesControllerToInt" method="set_down_up_key_arrow_left"]
[connection signal="pressed" from="Button Say My Name" to="SayHelloWithUDP" method="send_text_message" binds= ["Eloi Stree"]]
[connection signal="button_down" from="Button Press Release" to="SayHelloWithUDP" method="send_text_message" binds= ["Down / Presing"]]
[connection signal="button_up" from="Button Press Release" to="SayHelloWithUDP" method="send_text_message" binds= ["Up / Released"]]
[connection signal="pressed" from="Button Press Release" to="SayHelloWithUDP" method="send_text_message" binds= ["Eloi Stree"]]
[connection signal="toggled" from="Toggle Down Release" to="Toggle Down Release/SendTextMessageOnOff" method="request_to_send_message"]
[connection signal="on_request_to_send_message" from="Toggle Down Release/SendTextMessageOnOff" to="SayHelloWithUDP" method="send_text_message"]
[connection signal="on_integer_to_send_requested" from="PanelRootNES/NesControllerToInt" to="PanelRootNES/SendIntegerUDP" method="send_integer"]
[connection signal="on_down_up_value_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press A/NesUiButtonToDownUpBool" to="PanelRootNES/NesControllerToInt" method="set_down_up_key_a"]
[connection signal="on_down_up_value_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press B/NesUiButtonToDownUpBool2" to="PanelRootNES/NesControllerToInt" method="set_down_up_key_b"]
[connection signal="on_down_up_value_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Menu Left/NesUiButtonToDownUpBool3" to="PanelRootNES/NesControllerToInt" method="set_down_up_key_menu_left"]
[connection signal="on_down_up_value_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Menu Right/NesUiButtonToDownUpBool4" to="PanelRootNES/NesControllerToInt" method="set_down_up_key_menu_right"]
[connection signal="on_down_up_value_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Arrow Right/NesUiButtonToDownUpBool5" to="PanelRootNES/NesControllerToInt" method="set_down_up_key_arrow_right"]
[connection signal="on_down_up_value_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Arrow Up/NesUiButtonToDownUpBool6" to="PanelRootNES/NesControllerToInt" method="set_down_up_key_arrow_up"]
[connection signal="on_down_up_value_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Arrow Down/NesUiButtonToDownUpBool7" to="PanelRootNES/NesControllerToInt" method="set_down_up_key_arrow_down"]
[connection signal="on_down_up_value_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/Button Press Arrow Left/NesUiButtonToDownUpBool8" to="PanelRootNES/NesControllerToInt" method="set_down_up_key_arrow_left"]
[connection signal="text_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/LineEdit IP" to="PanelRootNES/SendIntegerUDP" method="set_target_ipv4"]
[connection signal="text_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/LineEdit Port" to="PanelRootNES/SendIntegerUDP" method="set_target_port"]
[connection signal="text_changed" from="PanelRootNES/AspectRatioContainer/PanelRatioNES/LineEdit PlayerID" to="PanelRootNES/SendIntegerUDP" method="set_target_player_index"]
